2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* gnibbles.desktop:

	Install into the proper locatio and add a Categories
	field.
	
2001-12-04  Duarte Loreto <happyguy_pt@hotmail.com>

        * gnibbles.desktop: Added Portuguese (pt) translation.

2001-07-27  Abel Cheung  <maddog@linux.org.hk>

	* gnibbles.desktop: Added traditional Chinese translation.

2001-07-14  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	I really sucks, the board resizing was totally broken, i need to 
	rework this to not use all this pixmap nightmare. But not now. I 
	just want it working right now.

	* gnibbles.c: (gnibbles_load_pixmap): Scale the pixbuf to the 
	  expected size.

2001-07-07  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* main.c
	* gnibbles.c: die bitch! die!, scream! scream!, hahaha, eat that
	  stupid imlib.

2001-07-05  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* gnibbles.c (gnibbles_load_pixmap), (gnibbles_load_level): Fix
	  typos.

2001-07-05  Christian Rose  <menthos@menthos.com>

	* gnibbles.desktop: Modified Swedish translation.

2001-06-11  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* gnibbles.c (gnibbles_load_pixmap), (gnibbles_load_level): Show
	  dialogs instead of g_prints.

2001-06-10  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* gnibbles.c (gnibbles_move_worms): Remove piece of invalid C
          code, pointed out by Albert Chin-A-Youn
	  <bugzilla-gnome@thewrittenword.com>. Bug #56010

	* worm.c (gnibbles_worm_undraw_nth): Now i hope this would be rigth.

2001-06-09  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* worm.c (gnibbles_worm_undraw_nth): Don't enter in a infinite
	  loop!

2001-06-08  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	Apply patch from Jeff Ozvold <corsalini@yahoo.it>. Bug #52900.

	* main.c (main_loop): Ensure we don't try to load randon level 0.

2001-06-06  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* main (new_game_2_cb): Check if the IDs are 0 before defining a