@@ -55,8 +55,8 @@ void gnibbles_draw_pixmap (gint which, gint x, gint y);
 void gnibbles_draw_big_pixmap (gint which, gint x, gint y);
 void gnibbles_draw_pixmap_buffer (gint which, gint x, gint y);
 void gnibbles_draw_big_pixmap_buffer (gint which, gint x, gint y);
-void gnibbles_load_pixmap ();
-void gnibbles_load_level (int level);
+void gnibbles_load_pixmap (GtkWidget *window);
+void gnibbles_load_level (GtkWidget *window, int level);
 void gnibbles_init ();
 void gnibbles_add_bonus (int regular);
 void gnibbles_destroy ();
